--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 </div>
                 <div class="hero-image">
                     <div class="profile-img">
-                        <img src="images/rahul.jpg" alt="Rahulkumar Parmar">
+                        <img src="rahul.jpg" alt="Rahulkumar Parmar">
                     </div>
                 </div>
             </div>
@@ -78,4 +78,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
